# lantor

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
bench/: composer-input-latency-e2e.mjs  composer-input-latency.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_store.rs  agent_environment.rs  agent_event.rs  agent_inbox_wake.rs  agent_memory.rs  agent_profile.rs  agent_routing.rs  agent_work_dispatch.rs  agent_workspace.rs  app.rs  artifact_store.rs  attachments.rs  bootstrap.rs  channels.rs  context_tool.rs  db.rs  freshness.rs  launch_agent.rs  lifecycle_commands.rs  main.rs  message_store.rs  models.rs  owner_inbox.rs  platform_paths.rs  prompts.rs  publish_guard.rs  system_commands.rs  task_messages.rs  task_store.rs  test_support.rs  text.rs  ui_notifications.rs  usage.rs  web.rs
src-tauri/src/commands/: agents.rs  artifacts.rs  bootstrap.rs  channels.rs  inbox.rs  messages.rs  mod.rs  tasks.rs
src-tauri/src/domain/: mod.rs  reminders.rs  schedules.rs
src-tauri/src/events/: activity.rs  control.rs  mod.rs
src-tauri/src/runtime/: claude.rs  codex.rs  mod.rs  process.rs  streaming.rs  supervisor.rs  surface.rs  turn_outcome.rs
src-tauri/src/runtime/claude/: protocol.rs  reaper.rs  turn.rs
src-tauri/src/runtime/codex/: protocol.rs  reaper.rs  turn.rs
src-tauri/src/tests/: agent_inbox_wake.rs  agent_memory.rs  agent_routing.rs  agent_work_dispatch.rs  context_tool.rs  events_control.rs  prompts.rs  runtime_process.rs  runtime_streaming.rs  runtime_surface.rs
(+72 files in other folders)
