[package]
name = "localslock"
version = "0.1.0"
description = "Local-only Slock-style desktop console"
authors = ["Dylan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
