[package]
name = "lantor"
version = "0.1.0"
description = "Local-first Lantor agent workspace"
authors = ["Dylan"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.40", features = ["serde"] }
async-stream = "0.3.6"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tauri = { version = "2.5.1", features = ["protocol-asset"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "fs"] }
tokio = { version = "1.44.2", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
